# sudoku_ocr

./: .gitignore  README.md  check_warped_image.py  fix_cell_extraction.py  improve_digit_recognition.py  inspect_warped_image.py  minimal_test.py  pyproject.toml  pytest.ini  requirements.txt  test_all_images.py  test_sudoku_json.py
data/interim/: .gitkeep
data/processed/cells/: .gitkeep
data/raw/: .gitkeep  TestData.txt
src/sudoku_ocr/: __init__.py  cells.py  cli.py  grid.py  ocr.py  preprocess.py
tests/: test_grid_stub.py
