[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-ocr"
version = "0.1.0"
description = "A Sudoku OCR tool for extracting and solving Sudoku puzzles from images"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "numpy",
]
authors = [
    {name = "William Murphy", email = "william@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
sudoku-ocr = "sudoku_ocr.cli:main"

[tool.setuptools]
packages = ["sudoku_ocr"]
package-dir = {"" = "src"}
